# apt-tracker

./: Makefile  README.md  pyproject.toml
deployment/: docker-compose.yml
src/: dependencies.py  main.py  models.py  parser.py  server.py  templates.py
templates/: base.html  error.html  group.html  index.html
